--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,27 @@
     display: none;
 }
 
+.header {
+    .header-images{
+        justify-content: center;
+    }
+    .header__cart{
+        padding: 10px;
+        width: fit-content;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+    }
+    .header__user{
+        padding: 10px;
+        width: fit-content;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+    }
+
+}
+
 .header, .footer{
     background: var(--gradiant);
     color: var(--color3);
@@ -33,12 +54,28 @@
     margin-top: 40px;
 }
 
+.nav-bar-responsive{
+    position: relative;
+    top: -30px;
+    display: none;
+}
+
 .nav-bar{
     position: relative;
     top: -30px;
     background-color: var(--color3);
     margin: auto;
     font-size: 1.1rem;
+
+    .nav-list{
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        --items: 4;
+    }
+    .nav-list__item{
+        width: calc(100% / var(--items));
+    }
 }
 
 .list{
@@ -174,6 +211,7 @@
 
 
         .button{
+            width: 150px;
             margin: 10px;
             padding: 10px;
             background-color: var(--color5);
@@ -200,4 +238,107 @@
 
 .form__field .new-user .link:hover{
     transform: scale(1.02);
+}
+
+
+/******************RESPONSIVE******************/
+@media screen and(max-width: 768px){
+
+    body{
+        display: flex;
+        flex-direction: column;
+    }
+    .nav-bar-responsive{
+        order:1;/*Situo el nav arriba del header*/
+        display: flex;
+        position: relative;
+        top: 0;
+    }
+    .header {
+        order:2;/*Situo el header debajo del nav*/
+        display: flex;
+        flex-direction: row;
+        width: 60%;
+        justify-content: center;
+        .header__logo{
+            width: 50%;
+            margin: auto;
+            img{
+                max-height: 100%;
+                max-width: 100%;
+                object-fit:cover;
+            }
+        }
+        .header__cart{
+            position: relative;
+            top:-55px;
+        }
+        .header__user{
+            position: relative;
+            top:-55px;
+        }
+    }
+    .nav-bar{
+        display: none;
+    }
+    nav{
+        z-index: 1000;
+        width: 100%;
+        position: sticky;
+        top:0.001px;
+    }
+    main{
+        order:3;
+    }
+    footer{
+        order:4;
+    }
+    .grid-section{
+        display: flex;
+        flex-direction: column;
+    }
+    .form{
+        width: 100%;
+        .form__field--buttons{
+            margin: auto;
+            width: 100%;
+            flex-direction: row;
+            
+            .button{
+                width: fit-content;
+            }
+        }
+        .contact-buttons{
+            flex-direction: column;
+            align-items: center;
+            .button{
+                width: 95%;
+            }
+        }
+    }
+    
+
+}
+
+@media screen and(min-width: 768px) and (max-width: 992px){
+
+    .header {
+        width: 60%;
+        justify-content: center;
+        .header__logo{
+            width: 50%;
+            margin: auto;
+            img{
+                max-height: 100%;
+                max-width: 100%;
+                object-fit:cover;
+            }
+        }
+        .header__search{
+            display: none;
+        }
+    }
+    .nav-bar{
+        font-size: 0.9rem;
+    }
 }
