--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,10 @@
         position: absolute;
         top: 0px;
         left: 0px;
+        .cart{
+            font-size: 3rem;
+            color: --color1;
+        }
     }
     .header__user{
         padding: 10px;
@@ -40,6 +44,18 @@
         position: absolute;
         top: 0px;
         right: 0px;
+        .link{
+            color: var(--color1);
+            transition: all 200ms;
+            .account{
+                font-size: 3rem;
+                color: --color1;
+            }
+            .account:hover{
+                transform: scale(1.1);
+            }
+        }
+        
     }
 
 }
@@ -52,6 +68,36 @@
 
 .footer{
     margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .redes{
+        margin:auto;
+        width: 30%;
+        justify-content: center;
+        padding: 0px;
+        list-style: none;
+        display: flex;
+        --redes_items:5;
+        .redes__item{
+            text-align: center;
+            width: calc(100% / var(--redes_items));
+            padding: 10px;
+            font-size: 1.5rem;
+            transition: all 150ms;
+        }
+        .redes__item:hover{
+            transform: scale(1.2);
+            cursor: pointer;
+        }
+    }
+    
+    .derechos{
+        font-size: .7rem;
+        position: relative;
+        bottom:-70px;
+    }
 }
 
 .nav-bar-responsive{
@@ -194,7 +240,6 @@
         padding: 10px;
         display: flex;
         flex-direction: column;
-        border: solid 1p green;
 
         .input{
             margin: 10px 0px;
@@ -290,8 +335,12 @@
     main{
         order:3;
     }
-    footer{
+    .footer{
         order:4;
+        .redes{
+            font-size: 1rem;
+            width: 100%;
+        }
     }
     .grid-section{
         display: flex;
