--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,15 @@
     width: 95%;
   }
 }
+@media screen and (max-width: 1200px) {
+  .img-container__option {
+    flex-direction: column;
+    align-items: center;
+  }
+  .img-container__option .button {
+    width: 50%;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 992px) {
   .header {
     width: 60%;
