--- a/scss/style.scss
+++ b/scss/style.scss
@@ -375,6 +375,17 @@
 
 }
 
+@media screen and (max-width: 1200px){
+    .img-container__option{
+        flex-direction: column;
+        align-items: center;
+
+        .button{
+            width: 50%;
+        }
+    }
+}
+
 @media screen and(min-width: 768px) and (max-width: 992px){
 
     .header {
