--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,8 @@
 }
 #cart-main .cart {
   width: 100%;
+  border-collapse: separate;
+  border-spacing: 5px;
 }
 #cart-main .cart tbody {
   width: 100%;
@@ -304,6 +306,7 @@
   width: fit-content;
   height: fit-content;
   border-radius: 5px;
+  transition: all 300ms;
 }
 #cart-main .cart tbody .cart__row .cart-item .plus-less-buttons .plus-button {
   background-color: green;
@@ -312,6 +315,13 @@
 }
 #cart-main .cart tbody .cart__row .cart-item .plus-less-buttons .less-button {
   background-color: red;
+}
+#cart-main .cart tbody .cart__row .cart-item .trash-button {
+  transition: all 300ms;
+}
+#cart-main .cart tbody .cart__row .cart-item .plus-button:hover, #cart-main .cart tbody .cart__row .cart-item .less-button:hover, #cart-main .cart tbody .cart__row .cart-item .trash-button:hover {
+  transform: scale(1.2);
+  cursor: pointer;
 }
 
 .empty-cart {
