--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,6 +300,8 @@
 
     .cart{
         width: 100%;
+        border-collapse: separate;
+        border-spacing: 5px;
 
         tbody{
             width: 100%;
@@ -335,6 +337,7 @@
                             width: fit-content;
                             height: fit-content;
                             border-radius: 5px;
+                            transition: all 300ms;
                         }
                         .plus-button{
                             background-color: green;
@@ -345,6 +348,15 @@
                             background-color: red;
                         }
 
+                        
+                    }
+                    .trash-button{
+                        transition: all 300ms;
+                    }
+
+                    .plus-button:hover, .less-button:hover, .trash-button:hover{
+                        transform: scale(1.2);
+                        cursor: pointer;
                     }
                 }
 
