--- a/scss/style.scss
+++ b/scss/style.scss
@@ -350,14 +350,17 @@
 
                         
                     }
-                    .trash-button{
-                        transition: all 300ms;
-                    }
+                }
 
-                    .plus-button:hover, .less-button:hover, .trash-button:hover{
-                        transform: scale(1.2);
-                        cursor: pointer;
-                    }
+                .trash-button{
+                    width: fit-content;
+                    margin: auto;
+                    transition: all 300ms;
+                }
+
+                .plus-button:hover, .less-button:hover, .trash-button:hover{
+                    transform: scale(1.2);
+                    cursor: pointer;
                 }
 
             }    
